5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1578_1560.log
== SUBMITION (2019-03-18 11:14:58) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print("AUGUSTA ADA BRYRON, A CONDASSA DE LOVELACE,NASCEU EM 1815, NA INGLATERRA")
-- EXECUTION TIME:
0.142156
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
AUGUSTA ADA BRYRON, A CONDASSA DE LOVELACE,NASCEU EM 1815, NA INGLATERRA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 11:15:48) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print("augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra")
-- EXECUTION TIME:
0.142001
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 11:16:06) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra)
-- EXECUTION TIME:
0.131515
-- ERROR:
  File "/home/codebench/codes/1578/1560/main.py", line 2
    print(augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 11:16:27) 
-- CODE:
string ="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print("augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra")
-- EXECUTION TIME:
0.214112
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:40:01) 
-- CODE:
string ="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower())
-- ERROR:
File "XXXX", line 2
    print(Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower())
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:40:24) 
-- CODE:
string ="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower()")
-- OUTPUT:
Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:43:44) 
-- CODE:
string ="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 11:43:51) 
-- CODE:
string ="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.168481
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
